--- a/Mission Reports.html
+++ b/Mission Reports.html
@@ -165,7 +165,11 @@
        guided the team to shatter the crystal core. We remember, we rebuild.</p>
     <a href="mission-reports/Echo-Containment-Report.html" class="report-link">📜 Read Full Report</a>
   </article>
-
+<article class="report">
+  <h2>The Argent Masquerade</h2>
+  <p>A Silver‑rank investigation at Ashminster Highcourt turns deadly when a social infiltration unearths an agent of the Ivory Labyrinth and a stolen artifact. The squad exposes the true villain, wrests control of a mind‑controlling device and secures the Heart of the Highcourt.</p>
+  <a href="mission-reports/the-argent-masquerade-report.html" class="report-link">📜 Read Full Report</a>
+</article>
 </div>
 
 </body>
