--- a/Mission Board.html
+++ b/Mission Board.html
@@ -268,6 +268,25 @@ const missionData = [
     ],
     "extra": "Travelers report humming thorns that pierce without blood."
   },
+  {
+  name: "The Infernal Spire",
+  types: ["Combat", "Crisis", "Ritual", "Exploration"],
+  rank: "Silver",
+  length: "Medium-Long",
+  reward: "1400g + Riftbreaker Kit (one-use ward-pylon charge)",
+  status: "active",
+  location: "Shadowlands Rift, Inner Caldera",
+  objective: "Descend the nascent spire, sever its anchor stones, and halt the pulse feeding lesser breaches.",
+  steps: [
+    "Establish a foothold at the caldera rim",
+    "Locate and map the three anchor stones",
+    "Defeat the Spire Warden and its ash-bound sentries",
+    "Sever the anchors via counter-sigils or controlled demolition",
+    "Escape before the collapse shockwave sweeps the caldera"
+  ],
+  extra: "Backwash hazards: blood-hail, time-stutter pockets, and climbing heat mirages. Templar scavengers observed harvesting shard fragments.",
+  impact: "Success damps regional rift activity for several weeks; failure strengthens satellite breaches along trade routes and risks a full Warden manifestation."
+},
 {
   name: "Demon Portal Shutdown",
   types: ["Combat", "Exploration"],
